# llvm-project-old

./: README.md
clang/include/clang/AST/: Decl.h
clang/include/clang/Basic/: IdentifierTable.h  Specifiers.h
clang/include/clang/CodeGen/: CGFunctionInfo.h
clang/include/clang/Parse/: Parser.h
clang/include/clang/Sema/: DeclSpec.h  Scope.h
clang/lib/AST/: ASTContext.cpp  Decl.cpp
clang/lib/CodeGen/: CodeGenModule.cpp  CodeGenModule.h
clang/lib/Lex/: Lexer.cpp
clang/lib/Parse/: ParseAST.cpp  ParseDecl.cpp  ParseDeclCXX.cpp  ParseExpr.cpp  ParseExprCXX.cpp  ParseStmt.cpp  Parser.cpp
clang/lib/Sema/: SemaDecl.cpp  SemaExpr.cpp
clang/test/CodeGen/: Figure.c  Monomethod.c  check_all.py  pp-base.c  pp-generalization.c  pp-init.c  pp-linked.c  pp-mm-3d.c  pp-mm-5d.c  pp-mm-tag.c  pp-mm.c  pp-spec-base-types.c  pp-spec-ptr.c  pp-tagged-create_spec.c  pp-tagged-generalization.c  pp-tread-rect-ppp.c  pp-triple-create_spec.c
clang/test/CodeGen/Inputs/: Figure.c  Triangle.c  pp-linked-figure.c  pp-linked-figure.h  pp-linked-triangle.c  pp-linked-triangle.h
llvm/include/llvm/IR/: IntrinsicInst.h  Intrinsics.td
llvm/include/llvm/ProfileData/: InstrProf.h
llvm/lib/ProfileData/: InstrProf.cpp
llvm/lib/Transforms/Instrumentation/: InstrProfiling.cpp  PGOInstrumentation.cpp
llvm/test/Examples/PPP/: check_all.py
llvm/test/Examples/PPP/patterns/abstract-factory/ppp/direct/: CMakeLists.txt  container-in.c  container-out.c  figure-factory.c  figure-out.c  figure.h  figures-input.c  main.c  rectangle-inout.c  triangle-inout.c
(+162 files in other folders)
